# ValidVoiceDetector

./: .gitignore  README.md
Main/: CMakeLists.txt  LEDMatrix  Sound+LED  nrf52840_nrf52840.overlay  prj.conf
Main/src/: batterydisplay.c  button.c  co2.c  co2.h  led.c  led.h  main.c
button_interrupt/: CMakeLists.txt
button_interrupt/src/: gpios.c  main.c
co2/: nrf52840dk_nrf52840 2.overlay  prj 2.conf
co2/src/: Main.code-workspace  main.c
led_batterydisplay/: .gitignore  CMakeLists.txt
led_batterydisplay/src/: main.c
led_ws2812/boards/: nrf52dk_nrf52832.overlay
led_ws2812/src/: main.c
pir/: CMakeLists.txt  nrf52840_nrf52840 3.overlay  nrf52840_nrf52840.overlay
pir/src/: main.c
pir_batterydisplay/: CMakeLists.txt  nrf52840_nrf52840.overlay  prj.conf
pir_batterydisplay/src/: batterydisplay.c  main.c  pir.c  pir.h
soundsensor_example/: blinky_1 2.code-workspace
soundsensor_example/src/: led 2.c  main 2.c
